<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="120dp"
    xmlns:tools="http://schemas.android.com/tools"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:paddingHorizontal="16dp"
    android:layout_marginVertical="16dp">

    <androidx.constraintlayout.widget.ConstraintLayout
        android:id="@+id/food_cc"
        android:layout_width="wrap_content"
        android:layout_height="match_parent">

        <ImageView
            android:id="@+id/food_image_iv"
            android:layout_width="0dp"
            android:layout_height="match_parent"
            tools:src="@drawable/pizza_logo"
            app:layout_constraintTop_toTopOf="parent"
            app:layout_constraintLeft_toLeftOf="parent"
            app:layout_constraintDimensionRatio="1:1"/>

    </androidx.constraintlayout.widget.ConstraintLayout>

    <TextView
        android:id="@+id/name_tv"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_toEndOf="@id/food_cc"
        android:layout_marginStart="16dp"
        tools:text="Пицца пепперони"
        android:textColor="@color/black"
        android:layout_marginTop="16dp"
        android:textSize="16sp"/>

    <TextView
        android:id="@+id/price_tv"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_toEndOf="@id/food_cc"
        android:layout_alignParentBottom="true"
        android:layout_marginBottom="16dp"
        android:layout_marginStart="16dp"
        tools:text="450"
        android:textColor="@color/black"
        android:textStyle="bold"
        android:textSize="16sp"/>

    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_toEndOf="@id/price_tv"
        android:layout_alignParentBottom="true"
        android:layout_marginBottom="16dp"
        android:textStyle="bold"
        android:textColor="@color/black"
        android:textSize="16sp"
        android:layout_marginStart="4dp"
        android:text="₽"/>

    <LinearLayout
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignParentBottom="true"
        android:layout_alignParentEnd="true"
        android:layout_margin="16dp">

        <androidx.appcompat.widget.AppCompatButton
            android:id="@+id/minus_btn"
            android:layout_width="25dp"
            android:layout_height="25dp"
            android:background="@drawable/ripple_fill_gray_corners_10"
            android:text="@string/minus"/>

        <TextView
            android:id="@+id/food_count_tv"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/zero"
            android:layout_gravity="center_vertical"
            android:layout_marginHorizontal="8dp"/>

        <androidx.appcompat.widget.AppCompatButton
            android:id="@+id/plus_btn"
            android:layout_width="25dp"
            android:layout_height="25dp"
            android:background="@drawable/ripple_fill_gray_corners_10"
            android:text="@string/plus"/>

    </LinearLayout>

</RelativeLayout>