<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".ui.cart.CartActivity"
    android:orientation="vertical">

    <RelativeLayout
        android:id="@+id/app_bar_rl"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:padding="16dp">

        <ImageView
            android:id="@+id/back_iv"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:src="@drawable/ic_back"
            app:tint="@color/black"
            android:layout_centerVertical="true"/>

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/cart"
            android:layout_toEndOf="@id/back_iv"
            style="@style/BoldTextView"
            android:layout_marginStart="16dp"/>

        <ImageView
            android:id="@+id/trash_iv"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:src="@drawable/trash"
            android:padding="4dp"
            android:layout_alignParentEnd="true"
            android:layout_centerVertical="true"/>

    </RelativeLayout>

    <androidx.recyclerview.widget.RecyclerView
        android:id="@+id/foods_list_rv"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:layout_below="@id/app_bar_rl"
        android:layout_above="@id/bottom_ll"/>

    <LinearLayout
        android:id="@+id/bottom_ll"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_alignParentBottom="true"
        android:orientation="vertical">

        <RelativeLayout
            android:id="@+id/bottom_rl"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_alignParentBottom="true"
            android:padding="16dp"
            android:background="#0A000000"
            android:layout_above="@id/bottom_ll">

            <ImageView
                android:id="@+id/table_tools_iv"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:src="@drawable/table_tools"/>

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_centerVertical="true"
                android:layout_toEndOf="@id/table_tools_iv"
                android:layout_marginStart="8dp"
                android:text="Приборы"
                android:textSize="20sp"
                android:textColor="@color/black"/>

            <LinearLayout
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_centerVertical="true"
                android:layout_alignParentEnd="true">

                <androidx.appcompat.widget.AppCompatButton
                    android:id="@+id/minus_btn"
                    style="@style/MiniGrayButton"
                    android:text="@string/minus"/>

                <TextView
                    android:id="@+id/tools_count_tv"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="@string/zero"
                    android:textColor="@color/black"
                    android:layout_gravity="center_vertical"
                    android:layout_marginHorizontal="8dp"/>

                <androidx.appcompat.widget.AppCompatButton
                    android:id="@+id/plus_btn"
                    android:text="@string/plus"
                    style="@style/MiniGrayButton"/>

            </LinearLayout>

        </RelativeLayout>


        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="vertical"
            android:padding="16dp">

            <RelativeLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content">

                <TextView
                    android:id="@+id/tovars_tv"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="Товары "
                    android:textSize="20sp"
                    android:textColor="@color/black"/>

                <TextView
                    android:id="@+id/count_foods_tv"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:textSize="20sp"
                    android:textColor="@color/black"
                    tools:text="(2)"
                    android:layout_toEndOf="@id/tovars_tv"/>

                <TextView
                    android:id="@+id/foods_price_tv"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_alignParentEnd="true"
                    android:text="0 ₽"
                    tools:text="700 ₽"
                    android:textSize="20sp"
                    android:textColor="@color/black"/>

            </RelativeLayout>

            <RelativeLayout
                android:layout_marginTop="8dp"
                android:layout_width="match_parent"
                android:layout_height="wrap_content">

                <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="Приборы"
                    android:textSize="20sp"
                    android:textColor="@color/black"/>

                <TextView
                    android:id="@+id/table_tools_price_tv"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_alignParentEnd="true"
                    tools:text="6 ₽"
                    android:text="0 ₽"
                    android:textSize="20sp"
                    android:textColor="@color/black"/>

            </RelativeLayout>

            <RelativeLayout
                android:layout_marginTop="8dp"
                android:layout_width="match_parent"
                android:layout_height="wrap_content">

                <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="Сумма"
                    android:textStyle="bold"
                    android:textSize="20sp"
                    android:textColor="@color/black"/>

                <TextView
                    android:id="@+id/all_price_tv"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_alignParentEnd="true"
                    tools:text="706 ₽"
                    android:text="0 ₽"
                    android:textStyle="bold"
                    android:textSize="20sp"
                    android:textColor="@color/black"/>

            </RelativeLayout>

            <Button
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:text="@string/order_zakaz"
                android:layout_marginVertical="30dp"/>

        </LinearLayout>

    </LinearLayout>

</RelativeLayout>